--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     <h1>Hello, World!</h1>
+    <h2>New line</h2>
     <p>This is my first web project.</p>
     <footer>
     <p>Created by Vicky</p>
